Fix social button CSS on mobile.

--- a/fileadmin/templates/sass/styles.scss
+++ b/fileadmin/templates/sass/styles.scss
@@ -936,6 +936,11 @@ This targets smartphones and small tablets in portrait mode
 				.news-meta {
 					@include font-m;
 				}
+				.social-buttons {
+					width: 100%;
+					margin-right: 0;
+					float: none;
+				}
 			}
 
 			#stack-nav {
